Lab4/Backend/Rob/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rob-delivery-service
  namespace: rob-delivery
spec:
  selector:
    app: rob-delivery-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7860
  type: ClusterIP
